trying to fix image issue and contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -160,10 +160,10 @@ ul a:hover {
     margin-left: 5px;
 }
 
-.card-img img {
+/* .card-img img {
     max-width: 100%;
     height: auto;
-}
+} */
 
 .utah .card-img {
     float: left;
@@ -179,7 +179,7 @@ footer {
     text-align: center;
     position: relative;
     background-color: var(--secondary-color);
-    color: var(--accent1-color);
+    color: white;
 }
 
 footer p {
